Fix wordwrap

--- a/source/stylesheets/_gocd-overrides.scss
+++ b/source/stylesheets/_gocd-overrides.scss
@@ -34,6 +34,7 @@ blockquote + .highlight {
   + table tbody tr {
     code {
       word-break: normal;
+      white-space: nowrap;
     }
   }
 }
